2017-08-26 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 55.0.3

2017-08-17 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 55.0.2

2017-08-11 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 55.0.1

2017-08-08 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 55.0, SECURITY_PATCH++,
	  (CVE-2017-7798, CVE-2017-7800, CVE-2017-7801, CVE-2017-7784,
	   CVE-2017-7802, CVE-2017-7785, CVE-2017-7786, CVE-2017-7806,
	   CVE-2017-7753, CVE-2017-7787, CVE-2017-7807, CVE-2017-7792,
	   CVE-2017-7804, CVE-2017-7791, CVE-2017-7808, CVE-2017-7782,
	   CVE-2017-7781, CVE-2017-7794, CVE-2017-7803, CVE-2017-7799,
	   CVE-2017-7783, CVE-2017-7788, CVE-2017-7789, CVE-2017-7790,
	   CVE-2017-7796, CVE-2017-7797, CVE-2017-7780, CVE-2017-7779)
	* DEPENDS: needs 3.32.x branch of nss
	* mozconfig: removed --enable-gio flag
	* patches/2001_system_harfbuzz.patch,
	  patches/2002_system_graphite2.patch: updated to current version

2017-07-08 Ismael Luceno <ismael@sourcemage.org>
	* CONFIGURE: Added persistent_remove for FIREFOX_GTK_VERSION

2017-07-01 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 54.0.1

2017-06-16 Ismael Luceno <ismael@sourcemage.org>
	* DEPENDS, CONFIGURE: removed FIREFOX_GTK_VERSION, only gtk+3 is
	  supported

2017-06-14 Pavel Vinogradov <public@sourcemage.org>
	* BUILD: removed obsolete rusty flag

2017-06-13 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 54.0, SECURITY_PATCH++,
	  (CVE-2017-5472, CVE-2017-7749, CVE-2017-7750, CVE-2017-7751,
	   CVE-2017-7752, CVE-2017-7754, CVE-2017-7755, CVE-2017-7756,
	   CVE-2017-7757, CVE-2017-7778, CVE-2017-7771, CVE-2017-7772,
	   CVE-2017-7773, CVE-2017-7774, CVE-2017-7775, CVE-2017-7776,
	   CVE-2017-7777, CVE-2017-7758, CVE-2017-7759, CVE-2017-7760,
	   CVE-2017-7761, CVE-2017-7762, CVE-2017-7763, CVE-2017-7764,
	   CVE-2017-7765, CVE-2017-7766, CVE-2017-7767, CVE-2017-7768,
	   CVE-2017-7771, CVE-2017-7770)
	* DEPENDS: needs rust