@@ -26,7 +26,7 @@ depends -sub APNG libpng "--enable-system-png"                   &&
 depends  librsvg2 "--enable-svg"                                 &&
 
 depends  nspr               "--with-system-nspr"                 &&
-depends  -sub "3.32.x" nss  "--with-system-nss"                  &&
+depends  -sub "3.33.x" nss  "--with-system-nss"                  &&
 
 depends  -sub "TSAFE SECURE_DELETE ENABLE_UNLOCK_NOTIFY ENABLE_DBSTAT_VTAB" sqlite "--enable-system-sqlite"    &&
 
