@@ -47,4 +47,6 @@ fi &&
 
 if [[ $FIREFOX_WIDEVINE == y ]]; then
   echo "ac_add_options --enable-eme=widevine" >> .mozconfig
+else
+  echo "ac_add_options --disable-eme" >> .mozconfig
 fi
