@@ -53,7 +53,7 @@ diff --git a/config/system-headers b/config/system-headers
 diff --git a/dom/base/moz.build b/dom/base/moz.build
 --- a/dom/base/moz.build
 +++ b/dom/base/moz.build
-@@ -463,16 +463,19 @@ include('/ipc/chromium/chromium-config.m
+@@ -471,16 +471,19 @@ include('/ipc/chromium/chromium-config.m
  FINAL_LIBRARY = 'xul'
  
  if CONFIG['MOZ_BUILD_APP'] in ['browser', 'mobile/android', 'xulrunner']:
@@ -172,7 +172,7 @@ diff --git a/gfx/skia/moz.build b/gfx/skia/moz.build
 diff --git a/gfx/thebes/moz.build b/gfx/thebes/moz.build
 --- a/gfx/thebes/moz.build
 +++ b/gfx/thebes/moz.build
-@@ -266,11 +266,14 @@ if CONFIG['MOZ_WIDGET_TOOLKIT'] in ('and
+@@ -268,11 +268,14 @@ if CONFIG['MOZ_WIDGET_TOOLKIT'] in ('and
  
  if CONFIG['MOZ_WIDGET_TOOLKIT'] in ('gtk2', 'gtk3'):
      CXXFLAGS += CONFIG['MOZ_PANGO_CFLAGS']
@@ -229,7 +229,7 @@ diff --git a/netwerk/dns/moz.build b/netwerk/dns/moz.build
 diff --git a/toolkit/library/moz.build b/toolkit/library/moz.build
 --- a/toolkit/library/moz.build
 +++ b/toolkit/library/moz.build
-@@ -206,16 +206,19 @@ if CONFIG['SERVO_TARGET_DIR']:
+@@ -207,16 +207,19 @@ if CONFIG['SERVO_TARGET_DIR']:
          OS_LIBS += ['-L%s' % CONFIG['SERVO_TARGET_DIR'], '-lgeckoservo']
  
  if CONFIG['MOZ_SYSTEM_JPEG']:
@@ -252,14 +252,14 @@ diff --git a/toolkit/library/moz.build b/toolkit/library/moz.build
 diff --git a/toolkit/moz.configure b/toolkit/moz.configure
 --- a/toolkit/moz.configure
 +++ b/toolkit/moz.configure
-@@ -351,16 +351,26 @@ def ft2_info(freetype2_combined_info, tr
-         return freetype2_combined_info
+@@ -309,16 +309,26 @@ def freetype2_combined_info(fontconfig_i
+     return namespace(
+         cflags=freetype2_info.cflags + fontconfig_info.cflags,
+         libs=freetype2_info.libs + fontconfig_info.libs,
+     )
  
- set_config('FT2_LIBS', ft2_info.libs)
- add_old_configure_assignment('FT2_LIBS',
-                              ft2_info.libs)
- add_old_configure_assignment('FT2_CFLAGS',
-                              ft2_info.cflags)
+ add_old_configure_assignment('_HAVE_FREETYPE2',
+                              depends_if(freetype2_info)(lambda _: True))
  
 +# HarfBuzz
 +# ==============================================================
