@@ -131,7 +131,7 @@ diff --git a/gfx/moz.build b/gfx/moz.build
 diff --git a/gfx/thebes/moz.build b/gfx/thebes/moz.build
 --- a/gfx/thebes/moz.build
 +++ b/gfx/thebes/moz.build
-@@ -264,16 +264,19 @@ CFLAGS += CONFIG['TK_CFLAGS']
+@@ -266,16 +266,19 @@ CFLAGS += CONFIG['TK_CFLAGS']
  if CONFIG['MOZ_WIDGET_TOOLKIT'] in ('android'):
      CXXFLAGS += CONFIG['CAIRO_FT_CFLAGS']
  
@@ -155,7 +155,7 @@ diff --git a/gfx/thebes/moz.build b/gfx/thebes/moz.build
 diff --git a/old-configure.in b/old-configure.in
 --- a/old-configure.in
 +++ b/old-configure.in
-@@ -4671,16 +4671,37 @@ if test "$USE_FC_FREETYPE"; then
+@@ -4378,16 +4378,37 @@ if test "$USE_FC_FREETYPE"; then
          CPPFLAGS="$CPPFLAGS $FT2_CFLAGS $XCFLAGS"
          MOZ_CHECK_HEADERS([fontconfig/fcfreetype.h], ,
              [AC_MSG_ERROR(Can't find header fontconfig/fcfreetype.h.)], [#include <fontconfig/fontconfig.h>])
@@ -196,7 +196,7 @@ diff --git a/old-configure.in b/old-configure.in
 diff --git a/toolkit/library/moz.build b/toolkit/library/moz.build
 --- a/toolkit/library/moz.build
 +++ b/toolkit/library/moz.build
-@@ -206,16 +206,19 @@ if CONFIG['SERVO_TARGET_DIR']:
+@@ -207,16 +207,19 @@ if CONFIG['SERVO_TARGET_DIR']:
          OS_LIBS += ['-L%s' % CONFIG['SERVO_TARGET_DIR'], '-lgeckoservo']
  
  if CONFIG['MOZ_SYSTEM_JPEG']:
@@ -219,14 +219,14 @@ diff --git a/toolkit/library/moz.build b/toolkit/library/moz.build
 diff --git a/toolkit/moz.configure b/toolkit/moz.configure
 --- a/toolkit/moz.configure
 +++ b/toolkit/moz.configure
-@@ -351,16 +351,30 @@ def ft2_info(freetype2_combined_info, tr
-         return freetype2_combined_info
+@@ -309,16 +309,30 @@ def freetype2_combined_info(fontconfig_i
+     return namespace(
+         cflags=freetype2_info.cflags + fontconfig_info.cflags,
+         libs=freetype2_info.libs + fontconfig_info.libs,
+     )
  
- set_config('FT2_LIBS', ft2_info.libs)
- add_old_configure_assignment('FT2_LIBS',
-                              ft2_info.libs)
- add_old_configure_assignment('FT2_CFLAGS',
-                              ft2_info.cflags)
+ add_old_configure_assignment('_HAVE_FREETYPE2',
+                              depends_if(freetype2_info)(lambda _: True))
  
 +# Graphite2
 +# ==============================================================
