@@ -1,3 +1,15 @@
+2017-09-28 Pavel Vinogradov <public@sourcemage.org>
+	* DETAILS: version 56.0, SECURITY_PATCH++,
+	  (CVE-2017-7793, CVE-2017-7817, CVE-2017-7818, CVE-2017-7819,
+	   CVE-2017-7824, CVE-2017-7805, CVE-2017-7812, CVE-2017-7814,
+	   CVE-2017-7813, CVE-2017-7825, CVE-2017-7815, CVE-2017-7816,
+	   CVE-2017-7821, CVE-2017-7823, CVE-2017-7822, CVE-2017-7820,
+	   CVE-2017-7811, CVE-2017-7810)
+	* DEPENDS: now needs 3.33.x branch of nss
+	* PRE_BUILD: explicitly disable DRM if said so (kudos to Thomas Orgis)
+	* patches/2001_system_harfbuzz.patch,
+	  patches/2002_system_graphite2.patch: updated to current version
+
 2017-08-26 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: version 55.0.3
 
